fix for deno usage spacing on pages with headings (#867)

--- a/overrides.css
+++ b/overrides.css
@@ -33,7 +33,12 @@
 }
 
 .ddoc .usageContent {
-  @apply bg-primary/5 border-primary/25 max-w-[75ch] py-4 mt-1 relative !important;
+  @apply bg-primary/5 border-primary/25 max-w-[75ch] py-4 mt-6 relative !important;
+}
+
+/* Adjust spacing for ref pages that don't have a header above usage */
+.ddoc .usageContent:first-of-type {
+  @apply mt-1 !important;
 }
 
 .ddoc .usageContent > div.markdown > pre.highlight {
